--- a/assets/cryptowish.html
+++ b/assets/cryptowish.html
@@ -75,22 +75,22 @@
                 <span class="currencyinput">$<input type="text"  class="number6" name="Price paid" value="" /></span>
                   <span class="currencyinput">$<input type="text" value=""  name="Total Cost" class="number7"/></span>
                   <span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number8" /></span>
-                  <br />
+                  <p><button type="submit" id="newrow">Add more coins</button></p>
+                  
               </form>
-          </div>
+            </div>
         
           <!-- add new row section -->
 
         <div id="container3"> 
           <table id="myTable">
             <tr>
-              <td>Row1 cell1</td>
-              <td>Row1 cell2</td>
-              <td>Row1 cell1</td>
-              <td>Row1 cell2</td>
-              <td>Row1 cell2</td>
+              <td>Row1</td>
+              <td>Row1</td>
+              <td>Row1</td>
+              <td>Row1</td>
+              <td>Row1</td>
             </tr>         
-              <button id="newrow" onclick="addnewrow()">Add more coins</button>
           </table>
         </div>
 
@@ -116,16 +116,20 @@
   <script src="./cryptowishmain.js"></script>
   <script>
 
-function addnewrow() {
-  let table =  document.getElementById('myTable');
-  let row = table.insertRow(0);
-  let cell1 = row.insertCell(0);
-  let cell2 = row.insertCell(1);
-  let cell3 = row.insertCell(2);
-  let cell4 = row.insertCell(3);
-  let cell5 = row.insertCell(4);
+$('#newrow').on('click', function(){
+  
+});
 
-}
+// function addnewrow() {
+//   let table =  document.getElementById('myTable');
+//   let row = table.insertRow(0);
+//   let cell1 = row.insertCell(0);
+//   let cell2 = row.insertCell(1);
+//   let cell3 = row.insertCell(2);
+//   let cell4 = row.insertCell(3);
+//   let cell5 = row.insertCell(4);
+
+// }
 // $(document).ready(function() {
 // var queryURL = "https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest?CMC_PRO_API_KEY=Y50c21e04-ba24-4f94-93a5-7d6ee709d647";
 
