--- a/app/public/index.html
+++ b/app/public/index.html
@@ -36,8 +36,8 @@
                     <!-- <div class="picks1"> -->
               <th>Coin Bought</th>
                 <th><div>Date Bought</div></th>
-                <th><div>How many coins bought</div></th>
-                <th><div>Coin price at purchase</div></th>
+                <th><div>Quantity bought</div></th>
+                <th><div>Price at purchase</div></th>
                 <th><div>Total Cost</div></th>
                 <th><div></div></th>
                 <!-- <th><div>Profit/Loss</div></th> -->
@@ -47,7 +47,7 @@
               <!-- <form action="" method="POST"> -->
          
             <tr>
-            <td>
+            <td id="firstCell">
                 <select id="dropdown1">
                 <option value="BTC" selected>Bitcoin</option>
                 <option value="ETH">Ethereum</option>
@@ -62,14 +62,14 @@
             </td>  
               <td><input type="date" id="date1" value="" name="dateBought" /></td>
               <td><input type="text" value="" name="Quantity bought"  class="number1"/></td>
-              <td><span class="currencyinput">$<input type="text"  class="number2" name="Price paid" value="" /></span></td>
-              <td><span class="currencyinput">$<input type="text" value=""  name="Total Cost" class="number3"/></span></td>
+              <td><input type="text"  class="number2" name="Price paid" value="" /></td>
+              <td><input type="text" value=""  name="Total Cost" class="number3"/></td>
               <td><button type="submit" id="save-btn">Save</button></td>
               <!-- <td> <span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number4" /></span></td> -->
             </tr>
               <!--number (above) if needed -- code min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100"-->
                <!-- add another row option (JS?) -->
-             <tr>
+             <!-- <tr>
             <td><select id="dropdown2">
                 <option value="BTC" selected>Bitcoin</option>
                 <option value="ETH">Ethereum</option>
@@ -86,10 +86,10 @@
             <td><input type="text" value="" name="Quantity bought"  class="number5"/></td>
             <td><span class="currencyinput">$<input type="text"  class="number6" name="Price paid" value="" /></span></td>
             <td><span class="currencyinput">$<input type="text" value=""  name="Total Cost" class="number7"/></span></td>
-            <td><button type="submit" id="save-btn">Save</button></td>
-            <!-- <td><span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number8" /></span></td> -->
-            <!-- </tr> </form> --> -->
-              <tr>
+            <td><button type="submit" id="save-btn">Save</button></td> -->
+            <!-- <td><span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number8" /></span></td> 
+             </tr> </form> 
+               <tr> -->
               <!-- <td>
                   <select id="dropdown1">
                   <option value="BTC" selected>Bitcoin</option>
@@ -108,8 +108,8 @@
                 <td><span class="currencyinput">$<input type="text"  class="number10" name="Price paid" value="" /></span></td>
                 <td><span class="currencyinput">$<input type="text" value=""  name="Total Cost" class="number11"/></span></td>
                 <td><button type="submit" id="save-btn">Save</button></td> -->
-                <!-- <td> <span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number12" /></span></td> -->
-              <!-- </tr> -->
+                <!-- <td> <span class="currencyinput">$<input type="text" value="" name="Profit/Loss"  class="number12" /></span></td>
+              </tr> -->
                 <!--number (above) if needed -- code min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100"-->
                  <!-- add another row option (JS?) -->
               <!-- <tr>
@@ -156,12 +156,12 @@
             <tr>
               <th>Coin Bought</th>
                 <th>Date Bought</th>
-                <th>How many coins bought</th>
-                <th>Coin price at purchase</th>
+                <th>Quantity bought</th>
+                <th>Price at purchase</th>
                 <th>Total Cost</th>
                 <th>Profit/Loss</th>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td><input type="text"  class="" value="" name="" /></td>
                 <td><input type="date" id="date1" value="" name="dateBought" /></td>
                 <td><input type="text"  value="" name="Quantity bought"  class="number13" /></td>
@@ -169,7 +169,7 @@
                 <td><input type="text"  value=""  name="Total Cost" class="number15"/></td>
                 <td><input type="text"  value="" name="Profit/Loss"  class="number16"/></td>
 
-            </tr>
+            </tr> -->
           </table></div>
 
         </div>
